Fix - shift burger menu to top of screen
- Everything on the page is shifted down 5% due to a parent style; moved
up the menu to compensate
- Remove commented out code

--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -23,7 +23,12 @@
   background: #bdc3c7;
 }
 
+.bm-overlay {
+  top: 0% !important;
+}
+
 .bm-menu-wrap {
+  top: 0% !important;
   left: -10px;
 }
 
